# test_github_actions

./: CMakeLists.txt  win32.rc  win32.rc.in
.github/workflows/: build-every-commit.yml  build-release.yml
